--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html>
+<style>
+body {
+  background-color: #090c21;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.piccenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+</style>
 <body>
-<h1>Hello World</h1>
-<iframe src="https://store.steampowered.com/widget/1992020/?t=A%20challenging%20top%20down%20shooter%20with%20puzzle%2Fplatforming%20elements.%20Play%20as%20a%20ghost%20who%20looks%20as%20dead%20on%20the%20outside%20as%20he%20is%20on%20the%20inside%2C%20making%20demons%20your%20weapons%20on%20a%20journey%20to%20fix%20your%20tv." frameborder="0" width="646" height="190"></iframe>
+<!--h1>Delusional Scrapyard</h1-->
+
+<image class=piccenter src="./logo.png"\>
+<tr\>
+<div class=center>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/4UG7appLRI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+</div>
+
+<br>
+
+<div class=center>
+	<iframe src="https://store.steampowered.com/widget/1992020/?t=A%20challenging%20top%20down%20shooter%20with%20puzzle%2Fplatforming%20elements.%20Play%20as%20a%20ghost%20who%20looks%20as%20dead%20on%20the%20outside%20as%20he%20is%20on%20the%20inside%2C%20making%20demons%20your%20weapons%20on%20a%20journey%20to%20fix%20your%20tv." frameborder="0" width="646" height="190"></iframe>
+</div>
 </body>
 </html>
