Webuilding (devo fare il gitignore)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@ body {
   margin-right: auto;
   width: 30%;
 }
+
+@font-face {
+  font-family: typewriter;
+  src: url(typewriter.ttf);
+}
+
+div {
+  font-family: typewriter;
+  color: lightgrey;
+  font-size: 32px;
+  white-space: pre-line;
+}
+
 </style>
 <title> Delusional Scrapyard </title>
 <body>
@@ -24,6 +37,15 @@ body {
 <br>
 <image class=piccenter src="./logo.png"\>
 <tr\>
+
+<div class=center>
+	Website very much under construction
+</div>
+<br>
+<div class=center>
+	<a href="presskit/demons-happened/index.html">Demons Happened Presskit</a>
+</div>
+<br>
 
 <div class=center>
 	<iframe src="https://store.steampowered.com/widget/1992020/?t=A%20challenging%20top%20down%20shooter%20with%20puzzle%2Fplatforming%20elements.%20Play%20as%20a%20ghost%20who%20looks%20as%20dead%20on%20the%20outside%20as%20he%20is%20on%20the%20inside%2C%20making%20demons%20your%20weapons%20on%20a%20journey%20to%20fix%20your%20tv." frameborder="0" width="580" height="190"></iframe>
