--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a {
 }
 
 </style>
-<title> Delusional Scrapyard </title>
+<title> Demons Happened </title>
 
 <header>    
 	<div class="background-animated"></div>
